removed unused imports, refined code and remove unnecessary code